--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is my vim config
+vim config
 
 curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
